--- a/index.html
+++ b/index.html
@@ -4,18 +4,39 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Ignat Petrov</title>
-	<link rel="stylesheet" href="style.css">
 	<link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed&display=swap" rel="preload" as="font">
+	<link rel="stylesheet" href="css/landing_page.css">
+	<link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-	<div class="main-title">
-		<h1>Ignat Petrov</h1>
-		<p>Software Developer</p>
-		<div class="chavron"></div>
-		<!-- with more than 5 years of experience in different areas, starting as a developer in a visual effects studio, switching to
-		building erp systems and at the moment working as a Full Stack Web Developer for over a year. Always accepting new challenges with
-		excitement and have a big passion for learning new things -->
+	<main id="landing-page-bg">
+		<div id="landing-page">
+			<h1>Ignat Petrov</h1>
+			<p>Software Developer</p>
+			<div class="chavron" onclick="enter()">
+				<div class="chavron2">
+					<div class="chavron3"></div>
+				</div>
+			</div>
+		</div>
+		<div class="transition-div"></div>
+	</main>
+
+	<div id="main-container">
+		<div class="header">
+			<h1 class="header-title">Ignat Petrov</h1>
+		</div>
+		<div class="about-text-container">
+			<p class="about-text">
+				Software Developer with more than 5 years of experience in different areas, starting as a developer in a visual effects studio, switching to
+				building erp systems and at the moment working as a Full Stack Web Developer for over a year. Always accepting new challenges with
+				excitement and have a big passion for learning new things
+			</p>
+		</div>
+	</div>
+
 <body>
-<script src="app.js"></script>
+<script src="js/title_anim.js"></script>
+<script src="js/app.js"></script>
 
 </html>
