stracture the main page

--- a/index.html
+++ b/index.html
@@ -22,18 +22,75 @@
 		<div class="transition-div"></div>
 	</main>
 
-	<div id="main-container">
-		<div class="header">
-			<h1 class="header-title">Ignat Petrov</h1>
+	<div class="second-page">
+		<div id="profile">
+			<div id="profile-container">
+				<img src="images/profile_pic.jpg" alt="profile picture" class="profile-pic" width="150px" height="150px">
+				<div class="header">
+					<h1 class="header-title">Ignat Petrov</h1>
+				</div>
+				<div class="about-text-container">
+					<p class="about-text">
+						Software Developer with more than 5 years of experience in different areas, starting as a developer in a visual effects studio, switching to
+						building erp systems and at the moment working as a Full Stack Web Developer for over a year. Always accepting new challenges with
+						excitement and have a big passion for learning new things
+					</p>
+				</div>
+				<div class="contact-info">
+					<a href="https://www.linkedin.com/in/ignat-petrov-98285872/" target="_blank">
+						<img src="icons/linkedin-brands.svg" alt="linkedin" width="40px" height="40px">
+					</a>
+					<a href="https://github.com/ignat14" target="_blank">
+						<img src="icons/github-brands.svg" alt="github" width="40px" height="40px">
+					</a>
+					<a href="https://github.com/ignat14" target="_blank">
+						<img src="icons/envelope-solid.svg" alt="github" width="40px" height="40px">
+					</a>
+				</div>
+			</div>
 		</div>
-		<div class="about-text-container">
-			<p class="about-text">
-				Software Developer with more than 5 years of experience in different areas, starting as a developer in a visual effects studio, switching to
-				building erp systems and at the moment working as a Full Stack Web Developer for over a year. Always accepting new challenges with
-				excitement and have a big passion for learning new things
-			</p>
+		<div id="work-experience">
+			<h1>Work Experience</h1>
+		</div>
+	
+		<div id="education">
+			<h1>Education</h1>
+		</div>
+	
+		<div id="skills">
+			<h1>Skills</h1>
+		</div>
+	
+		<div id="side-bar">
+			<ul>
+				<li>
+					<a href="#profile">
+						<img src="icons/user-solid.svg" alt="education" width="40px" height="40px" >
+						<b>Profile</b>
+					</a>
+				</li>
+				<li>
+					<a href="#work-experience">
+						<img src="icons/briefcase-solid.svg" alt="education" width="40px" height="40px" >
+						<b>Work Experience</b>
+					</button>
+				</li>
+				<li>
+					<a href="#education">
+						<img src="icons/university-solid.svg" alt="education" width="40px" height="40px" >
+						<b>Education</b>
+					</a>
+				</li>
+				<li>
+					<a href="#skills">
+						<img src="icons/code-solid.svg" alt="education" width="40px" height="40px" >
+						<b>Skills</b>
+					</a>
+				</li>
+			</ul>
 		</div>
 	</div>
+	
 
 <body>
 <script src="js/title_anim.js"></script>
