--- a/index.html
+++ b/index.html
@@ -20,6 +20,11 @@
 			</div>
 		</div>
 		<div class="transition-div"></div>
+		<div>
+			<h1 style="color: #fff;">Blank Canvas</h1>
+			<canvas id="matrix-canvas" width="1024" height="1000">
+			</canvas>
+		</div>
 	</main>
 
 	<div class="second-page">
@@ -43,7 +48,7 @@
 					<a href="https://github.com/ignat14" target="_blank">
 						<img src="icons/github-brands.svg" alt="github" width="40px" height="40px">
 					</a>
-					<a href="https://github.com/ignat14" target="_blank">
+					<a href="ignat14@gmail.com" target="_blank">
 						<img src="icons/envelope-solid.svg" alt="github" width="40px" height="40px">
 					</a>
 				</div>
