--- a/index.html
+++ b/index.html
@@ -7,13 +7,16 @@
 	<link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed&display=swap" rel="preload" as="font">
 	<link rel="stylesheet" href="css/landing_page.css">
 	<link rel="stylesheet" href="css/sidebar.css">
+	<link rel="stylesheet" href="css/timeline.css">
 	<link rel="stylesheet" href="css/main.css">
 </head>
 <body>
 	<main id="landing-page-bg">
 		<div id="landing-page">
 			<h1>Ignat Petrov</h1>
-			<p>Software Developer</p>
+			<div class="job-title">
+				<p>Software Developer</p>
+			</div>
 			<div class="chavron" onclick="enter()">
 				<div class="chavron2">
 					<div class="chavron3"></div>
@@ -61,20 +64,103 @@ excitement and have a big passion for learning new things
 			</div>
 		</div>
 		<div id="work-experience">
-			<h1>Work Experience</h1>
-			<div class="timeline">
-				<div class="timeline-container">
-					AAA
+			<h1 class="section-title">Work Experience</h1>
+			<div class="timeline section-container">
+				<div class="timeline-item">
+					<h3 class="year">11/2018 - present</h3>
+					<div class="timeline-container">
+						<h3>Full Stack Web Developer</h3>
+						<h4>Eyetea Solutions</h4>
+						<p>Working over a year on a project for communication and collaboration solutions for business continuity, 
+							disaster recovery, crisis communications and operations management</p>
+					</div>
+				</div>
+				<div class="timeline-item">
+					<h3 class="year">12/2018 - 11/2019</h3>
+					<div class="timeline-container">
+						<h3>Lecturer</h3>
+						<h4>Eyetea Solutions</h4>
+						<p>As the first Python Trainer at the Semos Education Center I developed a course for 2 Python classes
+							(5 weeks each) which I taught to groups of 10 - 13 students in the period of 1 year
+						</p>
+					</div>
+				</div>
+				<div class="timeline-item">
+					<h3 class="year">07/2018 - 11/2018</h3>
+					<div class="timeline-container">
+						<h3>Python Developer</h3>
+						<h4>Nebiz</h4>
+						<p>Created and customized numerous modules for the Odoo framework regarding accounting, sales, purchase,
+							inventory work and manufacturing for successful businesses located in Switzerland and Austria
+						</p>
+					</div>
+				</div>
+				<div class="timeline-item">
+					<h3 class="year">07/2014 - 06/2018</h3>
+					<div class="timeline-container">
+						<h3>Rotomation Supervisor / Python Developer</h3>
+						<h4>Vertigo Visual</h4>
+						<p>As Python developer I have created many tools which help automate the whole visual effects creation proccess using Python.
+							Some of the tools I've made helped double the artist's speed and more importantly helped for a lot more precise work
+						</p>
+					</div>
+				</div>
+				<div class="timeline-item">
+					<h3 class="year">11/2011 - 06/2012</h3>
+					<div class="timeline-container">
+						<h3>3D artist</h3>
+						<h4>FX3X</h4>
+						<p>As a new 3D artist I was able to learn the whole 3D animation pipeline which helped me later on when
+							developing and automating some of the key processes
+						</p>
+					</div>
 				</div>
 			</div>
 		</div>
 	
 		<div id="education">
-			<h1>Education</h1>
+			<h1 class="section-title">Education</h1>
+			<div class="section-container">
+
+				<h2>Bachelor's Degree</h2>
+				<h3>University ‘Ss. Cyril and Methodious’, Skopje</h3>
+				<h3>Faculty of Computer Science and Engineering</h3>
+				
+				<h2>Internships</h2>
+				<h3>Atiode Solar Systems LTD</h3>
+				<h3>Web Developer</h3>
+				<p>Apart from making the company’s website (using C# and .Net) I also worked on street traffic simulations using the software for crowd simulations MASSIVE.</p>
+				<h3>King Mongkut’s Institute of Technology</h3>
+				<p>Worked with PID controllers in LabView</p>
+				<p>Writing C programs for RS232 and USB interface</p>
+
+				<h2>Certificates</h2>
+				<h3>Southwestern University of Finance and Economy(SWUFE)</h3>
+				<p>Recipient of Confucius grant to attend Business Innovation and entrepreneurship courses at SWUFE.</p>
+				<p>Courses passed: China’s Political Economy, Chinese Innovation, China economic history, Belt and Road initiative, Chinese rule of law, Business Chinese.</p>
+				
+				<h2>Volunteer Experience</h2>
+				<p>IAESTE Macedonia - International Assosiation for the Exchange of Students for Technical Experience</p>
+
+			</div>
 		</div>
 	
 		<div id="skills">
-			<h1>Skills</h1>
+			<h1 class="section-title">Skills</h1>
+			<div class="section-container">
+				<ul>
+					<li>Python</li>
+					<li>Django</li>
+					<li>Flask</li>
+					<li>Sql and NoSql</li>
+					<li>Git</li>
+					<li>Rest API</li>
+					<li>HTML</li>
+					<li>CSS</li>
+					<li>Javascript</li>
+					<li>Vue.js</li>
+				</ul>
+			</div>
 		</div>
 	
 
