finish the education part

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 	<link rel="stylesheet" href="css/landing_page.css">
 	<link rel="stylesheet" href="css/sidebar.css">
 	<link rel="stylesheet" href="css/timeline.css">
+	<link rel="stylesheet" href="css/education.css">
 	<link rel="stylesheet" href="css/main.css">
 </head>
 <body>
@@ -68,49 +69,59 @@ excitement and have a big passion for learning new things
 			<div class="timeline section-container">
 				<div class="timeline-item">
 					<h3 class="year">11/2018 - present</h3>
-					<div class="timeline-container">
-						<h3>Full Stack Web Developer</h3>
-						<h4>Eyetea Solutions</h4>
-						<p>Working over a year on a project for communication and collaboration solutions for business continuity, 
+					<div class="front-card">
+						<h2 class="job-title">Full Stack Web Developer</h2>
+						<h4 class="company-name">Eyetea Solutions</h4>
+					</div>
+					<div class="back-card">
+						<p class="job-description">Working over a year on a project for communication and collaboration solutions for business continuity, 
 							disaster recovery, crisis communications and operations management</p>
 					</div>
 				</div>
 				<div class="timeline-item">
 					<h3 class="year">12/2018 - 11/2019</h3>
-					<div class="timeline-container">
-						<h3>Lecturer</h3>
-						<h4>Eyetea Solutions</h4>
-						<p>As the first Python Trainer at the Semos Education Center I developed a course for 2 Python classes
-							(5 weeks each) which I taught to groups of 10 - 13 students in the period of 1 year
-						</p>
-					</div>
+						<div class="front-card">
+							<h2 class="job-title">Lecturer</h2>
+							<h4 class="company-name">Semos Education</h4>
+						</div>
+						<div class="back-card">
+							<p class="job-description">As the first Python Trainer at the Semos Education Center I developed a course for 2 Python classes
+								(5 weeks each) which I taught to groups of 10 - 13 students in the period of 1 year
+							</p>
+						</div>
 				</div>
 				<div class="timeline-item">
 					<h3 class="year">07/2018 - 11/2018</h3>
-					<div class="timeline-container">
-						<h3>Python Developer</h3>
-						<h4>Nebiz</h4>
-						<p>Created and customized numerous modules for the Odoo framework regarding accounting, sales, purchase,
+					<div class="front-card">
+						<h2 class="job-title">Python Developer</h2>
+						<h4 class="company-name">Nebiz</h4>
+					</div>
+					<div class="back-card">
+						<p class="job-description">Created and customized numerous modules for the Odoo framework regarding accounting, sales, purchase,
 							inventory work and manufacturing for successful businesses located in Switzerland and Austria
 						</p>
 					</div>
 				</div>
 				<div class="timeline-item">
 					<h3 class="year">07/2014 - 06/2018</h3>
-					<div class="timeline-container">
-						<h3>Rotomation Supervisor / Python Developer</h3>
-						<h4>Vertigo Visual</h4>
-						<p>As Python developer I have created many tools which help automate the whole visual effects creation proccess using Python.
+					<div class="front-card">
+						<h2 class="job-title">Rotomation Supervisor / Python Developer</h2>
+						<h4 class="company-name">Vertigo Visual</h4>
+					</div>
+					<div class="back-card">
+						<p class="job-description">As Python developer I have created many tools which help automate the whole visual effects creation proccess using Python.
 							Some of the tools I've made helped double the artist's speed and more importantly helped for a lot more precise work
 						</p>
 					</div>
 				</div>
 				<div class="timeline-item">
 					<h3 class="year">11/2011 - 06/2012</h3>
-					<div class="timeline-container">
-						<h3>3D artist</h3>
-						<h4>FX3X</h4>
-						<p>As a new 3D artist I was able to learn the whole 3D animation pipeline which helped me later on when
+					<div class="front-card">
+						<h2 class="job-title">3D artist</h2>
+						<h4 class="company-name">FX3X</h4>
+					</div>
+					<div class="back-card">
+						<p class="job-description">As a new 3D artist I was able to learn the whole 3D animation pipeline which helped me later on when
 							developing and automating some of the key processes
 						</p>
 					</div>
@@ -122,25 +133,41 @@ excitement and have a big passion for learning new things
 			<h1 class="section-title">Education</h1>
 			<div class="section-container">
 
-				<h2>Bachelor's Degree</h2>
-				<h3>University ‘Ss. Cyril and Methodious’, Skopje</h3>
-				<h3>Faculty of Computer Science and Engineering</h3>
+				<h1>Bachelor's Degree</h1>
+				<section class="degree">
+					<h2>University ‘Ss. Cyril and Methodious’</h2>
+					<h4>Skopje, Macedonia</h4>
+					<h3>Faculty of Computer Science and Engineering</h3>
+				</section>
 				
-				<h2>Internships</h2>
-				<h3>Atiode Solar Systems LTD</h3>
-				<h3>Web Developer</h3>
-				<p>Apart from making the company’s website (using C# and .Net) I also worked on street traffic simulations using the software for crowd simulations MASSIVE.</p>
-				<h3>King Mongkut’s Institute of Technology</h3>
-				<p>Worked with PID controllers in LabView</p>
-				<p>Writing C programs for RS232 and USB interface</p>
+				<h1>Internships</h1>
+				<section class="internships">
+					<h2>Atiode Solar Systems LTD</h2>
+					<h4>Benin City, Nigeria</h4>
+					<ul>
+						<li>Working on the company's website. Using C# and .Net</li>
+						<li>Design street traffic simulations using the software for crawd simulations MASSIVE</li>
+					</ul>
+					<h2>King Mongkut’s Institute of Technology</h2>
+					<h4>Bangkok, Thailand</h4>
+					<ul>
+						<li>Worked with PID controllers in LabView</li>
+						<li>Writing C programs for RS232 and USB interface</li>
+					</ul>
+				</section>
 
-				<h2>Certificates</h2>
-				<h3>Southwestern University of Finance and Economy(SWUFE)</h3>
-				<p>Recipient of Confucius grant to attend Business Innovation and entrepreneurship courses at SWUFE.</p>
-				<p>Courses passed: China’s Political Economy, Chinese Innovation, China economic history, Belt and Road initiative, Chinese rule of law, Business Chinese.</p>
+				<h1>Certificates</h1>
+				<section class="certificates">
+					<h2>Southwestern University of Finance and Economy(SWUFE)</h2>
+					<h4>Chengdu, China</h4>
+					<h3>Recipient of Confucius grant to attend Business Innovation and entrepreneurship courses at SWUFE.</h3>
+					<!-- <p>Courses passed: China’s Political Economy, Chinese Innovation, China economic history, Belt and Road initiative, Chinese rule of law, Business Chinese.</p> -->
+				</section>
 				
-				<h2>Volunteer Experience</h2>
-				<p>IAESTE Macedonia - International Assosiation for the Exchange of Students for Technical Experience</p>
+				<h1>Volunteer Experience</h1>
+				<section class="volunteer">
+					<p>IAESTE Macedonia - International Assosiation for the Exchange of Students for Technical Experience</p>
+				</section>
 
 			</div>
 		</div>
@@ -186,6 +213,7 @@ excitement and have a big passion for learning new things
 
 <body>
 <script src="js/title_anim.js"></script>
+<script src="js/card_anim.js"></script>
 <script src="js/app.js"></script>
 
 </html>
