finish skills part

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 	<link rel="stylesheet" href="css/sidebar.css">
 	<link rel="stylesheet" href="css/timeline.css">
 	<link rel="stylesheet" href="css/education.css">
+	<link rel="stylesheet" href="css/skills.css">
 	<link rel="stylesheet" href="css/main.css">
 </head>
 <body>
@@ -58,9 +59,12 @@ excitement and have a big passion for learning new things
 					<a href="https://github.com/ignat14" target="_blank">
 						<img src="icons/github-brands.svg" alt="github" width="40px" height="40px">
 					</a>
-					<a href="ignat14@gmail.com" target="_blank">
+					<button class="email">
 						<img src="icons/envelope-solid.svg" alt="github" width="40px" height="40px">
-					</a>
+					</button>
+				</div>
+				<div class="email-show hide-email">
+					ignat14@gmail.com
 				</div>
 			</div>
 		</div>
@@ -175,18 +179,38 @@ excitement and have a big passion for learning new things
 		<div id="skills">
 			<h1 class="section-title">Skills</h1>
 			<div class="section-container">
-				<ul>
-					<li>Python</li>
-					<li>Django</li>
-					<li>Flask</li>
-					<li>Sql and NoSql</li>
-					<li>Git</li>
-					<li>Rest API</li>
-					<li>HTML</li>
-					<li>CSS</li>
-					<li>Javascript</li>
-					<li>Vue.js</li>
-				</ul>
+				<div class="skills-grid">
+					<div class="skill-item">
+						<img src="images/python.png" alt="python" width="70" height="70">
+						Python</div>
+					<div class="skill-item">
+						<img src="images/Django.png" alt="django" width="70" height="70">
+						Django</div>
+					<div class="skill-item">
+						<img src="images/flask.png" alt="flask">
+						Flask</div>
+					<div class="skill-item">
+						<img src="images/Database.png" alt="db">
+						Sql and NoSql</div>
+					<div class="skill-item">
+						<img src="images/Git-Icon-1788C.png" alt="git">
+						Git</div>
+					<div class="skill-item">
+						<img src="images/rest-api.png" alt="">
+						Rest API</div>
+					<div class="skill-item">
+						<img src="images/Html.png" alt="">
+						HTML</div>
+					<div class="skill-item">
+						<img src="images/Css3.png" alt="">
+						CSS</div>
+					<div class="skill-item">
+						<img src="images/javascript.png" alt="js">
+						Javascript</div>
+					<div class="skill-item">
+						<img src="images/vue.png" alt="">
+						Vue.js</div>
+				</div>
 			</div>
 		</div>
 	
