initial setup webpack

--- a/index.html
+++ b/index.html
@@ -19,18 +19,13 @@
 			<div class="job-title">
 				<p>Software Developer</p>
 			</div>
-			<div class="chavron" onclick="enter()">
+			<div class="chavron">
 				<div class="chavron2">
 					<div class="chavron3"></div>
 				</div>
 			</div>
 		</div>
 		<div class="transition-div"></div>
-		<!-- <div>
-			<h1 style="color: #fff;">Blank Canvas</h1>
-			<canvas id="matrix-canvas" width="1024" height="1000">
-			</canvas>
-		</div> -->
 	</main>
 
 	<div class="second-page">
@@ -68,6 +63,7 @@ excitement and have a big passion for learning new things
 				</div>
 			</div>
 		</div>
+
 		<div id="work-experience">
 			<h1 class="section-title">Work Experience</h1>
 			<div class="timeline section-container">
@@ -236,8 +232,6 @@ excitement and have a big passion for learning new things
 	
 
 <body>
-<script src="js/title_anim.js"></script>
-<script src="js/card_anim.js"></script>
-<script src="js/app.js"></script>
+<script src="dist/bundle.js"></script>
 
 </html>
