more webpack configs

--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Ignat Petrov</title>
 	<link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed&display=swap" rel="preload" as="font">
-	<link rel="stylesheet" href="css/landing_page.css">
+	<!-- <link rel="stylesheet" href="css/landing_page.css">
 	<link rel="stylesheet" href="css/sidebar.css">
 	<link rel="stylesheet" href="css/timeline.css">
 	<link rel="stylesheet" href="css/education.css">
 	<link rel="stylesheet" href="css/skills.css">
-	<link rel="stylesheet" href="css/main.css">
+	<link rel="stylesheet" href="css/main.css"> -->
 </head>
 <body>
 	<main id="landing-page-bg">
@@ -49,13 +49,13 @@ excitement and have a big passion for learning new things
 				</div>
 				<div class="contact-info">
 					<a href="https://www.linkedin.com/in/ignat-petrov-98285872/" target="_blank">
-						<img src="icons/linkedin-brands.svg" alt="linkedin" width="40px" height="40px">
+						<img src="images/linkedin-brands.svg" alt="linkedin" width="40px" height="40px">
 					</a>
 					<a href="https://github.com/ignat14" target="_blank">
-						<img src="icons/github-brands.svg" alt="github" width="40px" height="40px">
+						<img src="images/github-brands.svg" alt="github" width="40px" height="40px">
 					</a>
 					<button class="email">
-						<img src="icons/envelope-solid.svg" alt="github" width="40px" height="40px">
+						<img src="images/envelope-solid.svg" alt="github" width="40px" height="40px">
 					</button>
 				</div>
 				<div class="email-show hide-email">
@@ -67,65 +67,7 @@ excitement and have a big passion for learning new things
 		<div id="work-experience">
 			<h1 class="section-title">Work Experience</h1>
 			<div class="timeline section-container">
-				<div class="timeline-item">
-					<h3 class="year">11/2018 - present</h3>
-					<div class="front-card">
-						<h2 class="job-title">Full Stack Web Developer</h2>
-						<h4 class="company-name">Eyetea Solutions</h4>
-					</div>
-					<div class="back-card">
-						<p class="job-description">Working over a year on a project for communication and collaboration solutions for business continuity, 
-							disaster recovery, crisis communications and operations management</p>
-					</div>
-				</div>
-				<div class="timeline-item">
-					<h3 class="year">12/2018 - 11/2019</h3>
-						<div class="front-card">
-							<h2 class="job-title">Lecturer</h2>
-							<h4 class="company-name">Semos Education</h4>
-						</div>
-						<div class="back-card">
-							<p class="job-description">As the first Python Trainer at the Semos Education Center I developed a course for 2 Python classes
-								(5 weeks each) which I taught to groups of 10 - 13 students in the period of 1 year
-							</p>
-						</div>
-				</div>
-				<div class="timeline-item">
-					<h3 class="year">07/2018 - 11/2018</h3>
-					<div class="front-card">
-						<h2 class="job-title">Python Developer</h2>
-						<h4 class="company-name">Nebiz</h4>
-					</div>
-					<div class="back-card">
-						<p class="job-description">Created and customized numerous modules for the Odoo framework regarding accounting, sales, purchase,
-							inventory work and manufacturing for successful businesses located in Switzerland and Austria
-						</p>
-					</div>
-				</div>
-				<div class="timeline-item">
-					<h3 class="year">07/2014 - 06/2018</h3>
-					<div class="front-card">
-						<h2 class="job-title">Rotomation Supervisor / Python Developer</h2>
-						<h4 class="company-name">Vertigo Visual</h4>
-					</div>
-					<div class="back-card">
-						<p class="job-description">As Python developer I have created many tools which help automate the whole visual effects creation proccess using Python.
-							Some of the tools I've made helped double the artist's speed and more importantly helped for a lot more precise work
-						</p>
-					</div>
-				</div>
-				<div class="timeline-item">
-					<h3 class="year">11/2011 - 06/2012</h3>
-					<div class="front-card">
-						<h2 class="job-title">3D artist</h2>
-						<h4 class="company-name">FX3X</h4>
-					</div>
-					<div class="back-card">
-						<p class="job-description">As a new 3D artist I was able to learn the whole 3D animation pipeline which helped me later on when
-							developing and automating some of the key processes
-						</p>
-					</div>
-				</div>
+				<!-- CODE LOADED FROM JSON GOES HERE -->
 			</div>
 		</div>
 	
@@ -232,6 +174,5 @@ excitement and have a big passion for learning new things
 	
 
 <body>
-<script src="dist/bundle.js"></script>
 
 </html>
