start making it responsive

--- a/index.html
+++ b/index.html
@@ -5,12 +5,6 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Ignat Petrov</title>
 	<link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed&display=swap" rel="preload" as="font">
-	<!-- <link rel="stylesheet" href="css/landing_page.css">
-	<link rel="stylesheet" href="css/sidebar.css">
-	<link rel="stylesheet" href="css/timeline.css">
-	<link rel="stylesheet" href="css/education.css">
-	<link rel="stylesheet" href="css/skills.css">
-	<link rel="stylesheet" href="css/main.css"> -->
 </head>
 <body>
 	<main id="landing-page-bg">
@@ -31,7 +25,7 @@
 	<div class="second-page">
 		<div id="profile">
 			<div id="profile-container">
-				<img src="images/profile_pic.jpg" alt="profile picture" class="profile-pic" width="150px" height="150px">
+				<img src="images/profile_pic.jpg" alt="profile picture" class="profile-pic">
 				<div class="header">
 					<h1 class="header-title">Ignat Petrov</h1>
 				</div>
@@ -41,11 +35,6 @@
 						building erp systems and at the moment working as a Full Stack Web Developer for over a year. Always accepting new challenges with
 						excitement and have a big passion for learning new things
 					</p>
-					<!-- <canvas id="about-canvas" width="1000" height="1000">
-Software Developer with more than 5 years of experience in different areas, starting as a developer in a visual effects studio, switching to
-building erp systems and at the moment working as a Full Stack Web Developer for over a year. Always accepting new challenges with
-excitement and have a big passion for learning new things
-					</canvas> -->
 				</div>
 				<div class="contact-info">
 					<a href="https://www.linkedin.com/in/ignat-petrov-98285872/" target="_blank">
@@ -152,9 +141,9 @@ excitement and have a big passion for learning new things
 			</div>
 		</div>
 	
-
+		<div class="top-bar"></div>
 		<div class="nav-right">
-			<div class="button" id="btn">
+			<div class="hamburger" id="btn">
 				<div class="bar top"></div>
 				<div class="bar middle"></div>
 				<div class="bar bottom"></div>
